force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <label>Goal</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>