force-app/main/default/objects/Goal__c/fields/Contribution__c.field-meta.xml
<CustomField>
    <fullName>Contribution__c</fullName>
    <description>How much the customer expects to invest over the time period.</description>
    <inlineHelpText>How much the customer expects to invest over the time period.</inlineHelpText>
    <label>Contribution</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>