force-app/main/default/objects/Goal__c/fields/Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Amount__c</fullName>
    <description>Calculated based on the goal split and the customer contribution amount entered by customer on signup.</description>
    <formula>Person_Account__r.Contribution_For_Payment_Frequency__c  *  Goal_Split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>