force-app/main/default/objects/Goal__c/fields/Contribution_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Frequency__c</fullName>
    <formula>TEXT(Person_Account__r.Payment_Frequency__c)</formula>
    <label>Contribution Frequency</label>
    <type>Text</type>
</CustomField>