force-app/main/default/objects/Goal__c/fields/Drift_Change_Snoozed_Until__c.field-meta.xml
<CustomField>
    <fullName>Drift_Change_Snoozed_Until__c</fullName>
    <description>This field will update if the Drift Rebalance is denied.</description>
    <label>Drift Change Snoozed Until</label>
    <type>DateTime</type>
</CustomField>