force-app/main/default/objects/Goal__c/fields/Duration_Change_Snoozed_Until__c.field-meta.xml
<CustomField>
    <fullName>Duration_Change_Snoozed_Until__c</fullName>
    <description>This field populates when a rebalance is snoozed. It shows until when its snoozed.</description>
    <label>Duration Change Snoozed Until</label>
    <type>DateTime</type>
</CustomField>