force-app/main/default/objects/Goal__c/fields/Earnings__c.field-meta.xml
<CustomField>
    <fullName>Earnings__c</fullName>
    <description>The salary/wages entered by the customer.</description>
    <inlineHelpText>The salary/wages entered by the customer.</inlineHelpText>
    <label>Earnings</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>