force-app/main/default/objects/Goal__c/fields/Earnings_Percent__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Percent__c</fullName>
    <inlineHelpText>The percentage of the customer&apos;s salary/wages entered by the customer</inlineHelpText>
    <label>Earnings Percent</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>