force-app/main/default/objects/Goal__c/fields/First_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Deposit_Date__c</fullName>
    <description>First deposit date on a goal from phoebe sits here for the SFMC users to use it. Do not need to be visible on page layouts.</description>
    <label>First Deposit Date</label>
    <type>DateTime</type>
</CustomField>