force-app/main/default/objects/Goal__c/fields/Goal_ID__c.field-meta.xml
<CustomField>
    <fullName>Goal_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>To store id of goals.</description>
    <externalId>true</externalId>
    <label>Goal ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>