force-app/main/default/objects/Goal__c/fields/Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_Name__c</fullName>
    <description>Name of the goal that customer invest money for.</description>
    <label>Goal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>