force-app/main/default/objects/Goal__c/fields/Goal_Split__c.field-meta.xml
<CustomField>
    <fullName>Goal_Split__c</fullName>
    <inlineHelpText>The percentage of the customer&apos;s deposit that goes toward this goal.</inlineHelpText>
    <label>Goal Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>