force-app/main/default/objects/Goal__c/fields/Initial_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit__c</fullName>
    <description>The Initial Deposit Amount Selected in App Signup.</description>
    <inlineHelpText>This is the Initial Deposit Amount that is entered while signing up on the app.</inlineHelpText>
    <label>Initial Deposit</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>