force-app/main/default/objects/Goal__c/fields/Initial_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit_Received__c</fullName>
    <description>The Deposit Amount Received as Initial Deposit on a Goal</description>
    <inlineHelpText>The Initial Deposit Amount Received as Initial Deposit on a Goal.</inlineHelpText>
    <label>Initial Deposit Received</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>