force-app/main/default/objects/Goal__c/fields/Notifications__c.field-meta.xml
<CustomField>
    <fullName>Notifications__c</fullName>
    <description>This field Shows if any of the Notifications are snoozed or not.</description>
    <formula>IF(Drift_Change_Snoozed_Until__c  &gt;  NOW()  &amp;&amp; Duration_Change_Snoozed_Until__c &gt; NOW(),   &quot;Snoozed&quot;, IF(Drift_Change_Snoozed_Until__c  &gt;  NOW(),   &quot;DriftChangeSnoozed&quot;, IF(Duration_Change_Snoozed_Until__c &gt; NOW(),   &quot;DurationChangeSnoozed&quot;, &quot;Active&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Status</label>
    <type>Text</type>
</CustomField>