force-app/main/default/objects/Goal__c/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <description>The name of the pack chosen by the customer for this goal.</description>
    <inlineHelpText>The name of the pack chosen by the customer for this goal.</inlineHelpText>
    <label>Pack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>