force-app/main/default/objects/Goal__c/fields/Percentage_Split__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Split__c</fullName>
    <label>Percentage Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>