force-app/main/default/objects/Goal__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>