force-app/main/default/objects/Goal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of goals.</description>
    <inlineHelpText>Goals become active when the first deposit has been processed for the goal. Withdrawals are disabled if a goal is locked.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <label>active</label>
            </value>
            <value>
                <fullName>Locked</fullName>
                <label>locked</label>
            </value>
            <value>
                <fullName>Unlocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>