force-app/main/default/objects/Goal__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Store TimeStamp Generated by AWS.</description>
    <inlineHelpText>Store TimeStamp Generated by AWS.</inlineHelpText>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>