force-app/main/default/objects/Goal__c/listViews/All_Goals.listView-meta.xml
<ListView>
    <fullName>All_Goals</fullName>
    <columns>NAME</columns>
    <columns>Goal_Name__c</columns>
    <columns>Person_Account__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Portfolio__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Goals</label>
</ListView>